Fix reporte pedidos ajuste en filtro - Tickets de entrega y de cancelación de pedidos

--- a/frontFarm/src/app/impresiones/pedido-ticket/pedido-ticket.component.html
+++ b/frontFarm/src/app/impresiones/pedido-ticket/pedido-ticket.component.html
@@ -1,26 +1,40 @@
 <!-- pedido-ticket.component.html -->
-<div class="ticket-impresion" id="ticketPedido">
+<div class="ticket-impresion" id="ticketPedido" style="font-family: Roboto Condensed, Arial, sans-serif;">
     <app-ticket-header [nombreFarmacia]="pedido.farmaNombre" [direccion]="pedido.farmaDireccion"
         [telefono]="pedido.farmaTelefono">
     </app-ticket-header>
-
-    <hr />
 
     <div class="info-pedido">
         <div>Pedido: <strong>{{ pedido.pedido.descripcion }}</strong></div>
         <div style="text-align: right;">Total: <strong>${{ pedido.pedido.total | number:'1.2-2' }}</strong></div>
         <div style="text-align: right;">Anticipo: <strong>${{ pedido.pedido.aCuenta | number:'1.2-2' }}</strong></div>
-        <div style="text-align: right;">Resta: <strong>${{ pedido.pedido.total - pedido.pedido.aCuenta | number:'1.2-2' }}</strong>
+        <div *ngIf="pedido.movimiento === 'agregar'" style="text-align: right;">
+            Resta: <strong>${{ pedido.pedido.total - pedido.pedido.aCuenta | number:'1.2-2' }}</strong>
+        </div>
+        <div *ngIf="pedido.movimiento === 'surtir'" style="text-align: right;">
+            Pago final: <strong>${{ pedido.pedido.total - pedido.pedido.aCuenta | number:'1.2-2' }}</strong>
+        </div>
+        <div *ngIf="pedido.movimiento === 'cancelar'" style="text-align: right;">
+            Dinero devuelto: <strong>${{ pedido.pedido.aCuenta | number:'1.2-2' }}</strong>
+        </div>
+        <hr />
+        <div *ngIf="pedido.movimiento === 'agregar'" style="text-align: center;">
+            <strong>Su pedido pronto se entregará</strong>
+        </div>
+        <div *ngIf="pedido.movimiento === 'surtir'" style="text-align: center;">
+            <strong>Su pedido le ha sido entregado</strong>
+        </div>
+        <div *ngIf="pedido.movimiento === 'cancelar'" style="text-align: center;">
+            <strong>Su pedido fue CANCELADO</strong>
+        </div>
+        <hr />
+        <div class="info-general">
+            <div style="font-size: 15px;">Folio pedido: {{ pedido.pedido.folio }}</div>
+            Fecha: {{ fechaActual | date:'dd/MM/yyyy HH:mm' }} hrs.<br />
+            Atendió: {{ pedido.userName }}<br />
+            Cliente: {{ pedido.client || 'Público general' }}
+        </div>
+        <hr />
+        <app-ticket-footer></app-ticket-footer>
     </div>
-
-    <hr />
-
-    <div class="info-general">
-        <div style="font-size: 15px;">Folio pedido: {{ pedido.pedido.folio }}</div>
-        Fecha: {{ fechaActual | date:'dd/MM/yyyy HH:mm' }} hrs.<br />
-        Atendió: {{ pedido.userName }}<br />
-        Cliente: {{ pedido.client || 'Público general' }}
-    </div>
-    <hr />
-    <app-ticket-footer></app-ticket-footer>
 </div>
