Fix reporte fechas en ventas

--- a/frontFarm/src/app/components/sidebar/sidebar.component.html
+++ b/frontFarm/src/app/components/sidebar/sidebar.component.html
@@ -130,6 +130,11 @@
             <span>Resumen utilidades<fa-icon [icon]="'sack-dollar'" class="menu-icon"></fa-icon></span>
           </li>
         </ul>
+        <!-- <ul *ngIf="expandedSubMenu === 'balance'" class="submenu">
+          <li [routerLink]="'reporte/utilidades'" routerLinkActive="active" class="submenu-item">
+            <span>Reportes utilidades<fa-icon [icon]="'sack-dollar'" class="menu-icon"></fa-icon></span>
+          </li>
+        </ul> -->
 
       </li>
     </ul>
